--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
 
 <!--company intro-->
-<div class="background">
-  <img src="img/background.jpg" class="img-responsive" alt="Cinque Terre">
+<div class="black">
+<div class="bg">
+  <img src="img/Background-low.jpg" class="img-responsive" alt="Cinque Terre">
   </div>
+</div>
 <div class="companyinto">
-<div id="companyname"> NeatClub </div>
+<div class="companyname"> NeatClub </div>
 <div id="tagline">
   an app to practice safer sex
 </div>
@@ -95,17 +97,15 @@
 </div>
 
 <!--Hipaa Security-->
-<div class="row">
+
   <div class="hipaa">
-  <div class="col-sm-5">
-  <div class="hipaaicon"><img src="img/search.png" class="img-responsive" alt="Cinque Terre"></div>
-  </div>
-  <div class="col-sm-7 hipaatext">
-    <div class="hipaatitle">Hipaa Security</div><div class="hipaadescription">We understand that information about your sexual health is extremely sensitive and private. NeatClub app is compliant with HIPPA (Health Insurance Portability and Accountability Act) which is an established national standard to protect an individual's electronic personal health information.</div>
+  <div class="hipaaicon"><img src="img/privacy.png" class="img-responsive" alt="Cinque Terre"></div>
+  <div class="hipaatext">
+    <div class="hipaatitle">HIPAA Security</div><div class="hipaadescription">We understand that information about your sexual health is extremely sensitive and private. NeatClub app is compliant with HIPPA (Health Insurance Portability and Accountability Act) which is an established national standard to protect an individual's electronic personal health information.</div>
   </div>
 </div>
-</div>
 
-
+<!--copyrights-->
+<div class="copyrights">©NeatClub</div>
 </body>
 </html>
