--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </div>
 </div>
 <div class="companyinto">
+<div class="logo"><img src="img/logo-68.png" class="img-responsive" alt="Cinque Terre"></div>  
 <div class="companyname"> NeatClub </div>
 <div id="tagline">
   an app to practice safer sex
