--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
 </div>
 <div class="companyinto">
-<div class="logo"><img src="img/logo-68.png" class="img-responsive" alt="Cinque Terre"></div>  
+<div class="logo"><img src="img/logo-68.png" class="img-responsive" alt="Cinque Terre"></div>
 <div class="companyname"> NeatClub </div>
 <div id="tagline">
   an app to practice safer sex
@@ -102,7 +102,7 @@
   <div class="hipaa">
   <div class="hipaaicon"><img src="img/privacy.png" class="img-responsive" alt="Cinque Terre"></div>
   <div class="hipaatext">
-    <div class="hipaatitle">HIPAA Security</div><div class="hipaadescription">We understand that information about your sexual health is extremely sensitive and private. NeatClub app is compliant with HIPPA (Health Insurance Portability and Accountability Act) which is an established national standard to protect an individual's electronic personal health information.</div>
+    <div class="hipaatitle">HIPAA Security</div><div class="hipaadescription">We understand that information about your sexual health is extremely sensitive and private. NeatClub app is compliant with HIPAA (Health Insurance Portability and Accountability Act) which is an established national standard to protect an individual's electronic personal health information.</div>
   </div>
 </div>
 
