--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="stats">
 
   <div id="opening">
-  Out of 324M people in the United States,</br>a lot of us have uncurable</br>Sexually Transmitted Diseases(STDs)
+  Out of 324M people in the United States,</br>a lot of us have incurable</br>Sexually Transmitted Diseases(STDs)
     </div>
 
 <div class="circles">
@@ -58,7 +58,7 @@
 
 
 <div class= "questions">
-    Is it awkward to talk about STDs on a date? </br>or want to play safe with a sexy stranger in the bed?
+    Is it awkward to talk about STDs on a date? </br>Want to play safe with a sexy stranger in the bed?
 </div>
 
 </div>
