--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
   an app to practice safer sex
 </div>
 </div>
+ 
+  <!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="//club.us14.list-manage.com/subscribe/post?u=6aa94681d725276abde51f855&amp;id=889d64e428" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address </label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6aa94681d725276abde51f855_889d64e428" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
 
+<!--End mc_embed_signup-->
 
 <!--stats-->
 <div class="stats">
